--- a/.settings/com.appcelerator.titanium.core.prefs
+++ b/.settings/com.appcelerator.titanium.core.prefs
@@ -1,4 +1,16 @@
-LastRunTimestamp=1375968577848
-NumberOfExecutions=1
+LastRunTimestamp=1376665780397
+NumberOfExecutions=2
 SelectedPlatforms=android;blackberry;ipad;iphone;mobileweb
 eclipse.preferences.version=1
+provisioning_profiles/development/3CF49012-1B79-4DE1-98AA-A403952520B4/appid=com.appcelerator.winazure
+provisioning_profiles/development/3CF49012-1B79-4DE1-98AA-A403952520B4/name=WIndows Azure DEV
+provisioning_profiles/development/3CF49012-1B79-4DE1-98AA-A403952520B4/uuid=3CF49012-1B79-4DE1-98AA-A403952520B4
+provisioning_profiles/development/4BE9BDE8-E466-45C8-8DF4-09DA7372F4D8/appid=com.appcelerator.flashreport
+provisioning_profiles/development/4BE9BDE8-E466-45C8-8DF4-09DA7372F4D8/name=FlashReport-Dev
+provisioning_profiles/development/4BE9BDE8-E466-45C8-8DF4-09DA7372F4D8/uuid=4BE9BDE8-E466-45C8-8DF4-09DA7372F4D8
+provisioning_profiles/development/8AA968F9-3AAD-4383-9E01-B2233592F453/appid=com.grantges.pushmanager
+provisioning_profiles/development/8AA968F9-3AAD-4383-9E01-B2233592F453/name=PushManagerDev
+provisioning_profiles/development/8AA968F9-3AAD-4383-9E01-B2233592F453/uuid=8AA968F9-3AAD-4383-9E01-B2233592F453
+provisioning_profiles/development/C5DF6091-86F1-466D-8FEA-08E570B323AF/appid=*
+provisioning_profiles/development/C5DF6091-86F1-466D-8FEA-08E570B323AF/name=Wildcard Dev
+provisioning_profiles/development/C5DF6091-86F1-466D-8FEA-08E570B323AF/uuid=C5DF6091-86F1-466D-8FEA-08E570B323AF
