--- a/app/config.json
+++ b/app/config.json
@@ -10,7 +10,7 @@
         "theme": "oldschool"
     },
     "os:blackberry": {
-        "theme": "default"
+        "theme": "oldschool"
     },
     "dependencies": {
         "net.hoyohoyo.iconiclabel": "1.3"
