Added theme for mobileweb Updated config for mobileweb theme removed tablesection on menu table - not needed

--- a/app/config.json
+++ b/app/config.json
@@ -1,8 +1,12 @@
 {
-    "global": {},
+    "global": {	
+    },
     "env:development": {},
     "env:test": {},
     "env:production": {},
+    "os:mobileweb":{
+    	 "theme": "default"
+    },
     "os:ios": {
         "theme": "ios7"
     },
